# lextral

./: .env  .gitignore  Makefile  README.md  compose.yaml  main.py  presentation.md  pyproject.toml
.github/workflows/: ci.yaml
backend/: Dockerfile  index.html  infer.py  main.py  mistral_utils.py  models.py  pyproject.toml
backend/labels/: label_id_to_name.json  label_name_to_id.json
backend/rag/: encoder_mistral.py  retriever_pgvector.py  utils.py
chart/: values.yaml
chart/templates/: configmap.yaml
db/: README.md  apply_migrations.py  init.sh  init_kube.sh
db/migrations/: 01_create_db.sql
db/scripts/: build_embeddings_mistral.py
experiments/: build_dataset_jsonl.py  evaluate.py  evaluate_chatprompt_async.py  evaluate_mistral_self.py  finetune_mistral.py  finetune_mistral_self.py  finetuned_mistral_mano.py  infer.py  mistral_utils.py  pyproject.toml
kubernetes/: Chart.yaml
kubernetes/templates/: _helpers.tpl  deployment.yaml  secret.yaml
notebooks/: data_exploration.ipynb  data_exploration_plots.ipynb
