[project]
name = "lextral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.116.1",
    "matplotlib>=3.10.5",
    "mistralai>=1.9.3",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.42",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
